--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
++
     <uses-feature android:name="android.hardware.camera.front" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -16,7 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,8 +28,14 @@
         </activity>
         <activity
             android:name=".FrontCameraActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".BackCameraActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".BackCameraActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ConfirmActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ImageProcess"
             android:screenOrientation="portrait"></activity>
     </application>
 
